tests/dataset/tpc-ds/compiler/kotlin/q14.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q14.kt:44:12: error: redeclaration: Item
data class Item(var i_item_sk: Int, var i_brand_id: Int, var i_class_id: Int, var i_category_id: Int)
           ^
/tmp/q14.kt:54:12: error: redeclaration: Item
data class Item(var i_item_sk: Int, var i_brand_id: Int, var i_class_id: Int, var i_category_id: Int)
           ^
/tmp/q14.kt:110:10: error: names _, __, ___, ..., are reserved in Kotlin
    for (_ in g) {
         ^
/tmp/q14.kt:111:20: error: names _, __, ___, ... can be used only in back-ticks (`_`, `__`, `___`, ...)
        __res.add((_ as MutableMap<String, Any?>))
                   ^
